--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,23 @@
     "manifest_version": 3,
     "description": "An extension to mass delete tweets and retweets",
     "author": "Pius Ebiama",
-    "content_scripts": [{
-        "matches": ["*://twitter.com/*"],
-        "js": ["index.js"]
-
-    }],
-    "action": {
+    "icons": {
+        "128": "img/icons/icon128.png",
+        "48": "img/icons/icon48.ico",
+        "16": "img/icons/icon16.png"
+    },
+    "content_scripts": [
+        {
+            "matches": [
+                "*://twitter.com/*"
+            ],
+            "js": [
+                "index.js"
+            ]
+        }
+    ],
+    "browser_action": {
+        "default_icon": "img/icons/icon16.png",
         "default_popup": "index.html"
     }
 }
