--- a/manifest.json
+++ b/manifest.json
@@ -1,26 +1,43 @@
 {
-    "name": "Mass tweet deleter",
-    "version": "0.0.1",
-    "manifest_version": 3,
-    "description": "An extension to mass delete tweets and retweets",
-    "author": "Pius Ebiama",
-    "icons": {
-        "128": "img/icons/icon128.png",
-        "48": "img/icons/icon48.ico",
-        "16": "img/icons/icon16.png"
-    },
-    "content_scripts": [
-        {
-            "matches": [
-                "*://twitter.com/*"
-            ],
-            "js": [
-                "index.js"
-            ]
-        }
-    ],
-    "browser_action": {
-        "default_icon": "img/icons/icon16.png",
-        "default_popup": "index.html"
-    }
+	"name": "Bookmarks Manager",
+	"version": "0.0.1",
+	"manifest_version": 3,
+	"description": "An extension to manage bookmarks",
+	"author": "Michael C. Iyke, Dawit Getu, and Jumoke Kazeem",
+	"icons": {
+		"128": "img/icons/icon128.png",
+		"48": "img/icons/icon48.ico",
+		"16": "img/icons/icon16.png"
+	},
+	"background": {
+		"service_worker": "js/background/sw.js"
+	},
+	"content_scripts": [
+		{
+			"matches": [
+				"<all_urls>"
+			],
+			"css": [],
+			"js": [
+				"js/lib/jquery.min.js",
+				"js/index.js"
+			],
+			"run_at": "document_end"
+		}
+	],
+	"action": {
+		"default_icon": {
+			"128": "img/icons/icon128.png",
+			"48": "img/icons/icon48.ico",
+			"16": "img/icons/icon16.png"
+		},
+		"default_popup": "templates/index.html"
+	},
+	"options_ui": {
+		"page": "templates/settings.html",
+		"open_in_tab": true
+	},
+	"permissions": [
+		"bookmarks"
+	]
 }
