--- a/manifest_back.json
+++ b/manifest_back.json
@@ -12,14 +12,28 @@
 	"background": {
 		"service_worker": "js/background/sw.js"
 	},
+	"content_scripts": [
+		{
+			"matches": [
+				"<all_urls>"
+			],
+			"css": [
+				"css/styles.css"
+			],
+			"js": [
+				"js/lib/jquery.min.js",
+				"js/index.js"
+			],
+			"run_at": "document_end"
+		}
+	],
 	"action": {
 		"default_icon": {
-			"32": "img/icons/icon128.png",
-			"24": "img/icons/icon48.ico",
+			"128": "img/icons/icon128.png",
+			"48": "img/icons/icon48.ico",
 			"16": "img/icons/icon16.png"
 		},
-		"default_popup": "templates/index.html",
-		"default_title": "BookMark Manager"
+		"default_popup": "templates/index.html"
 	},
 	"options_ui": {
 		"page": "templates/settings.html",
@@ -28,9 +42,7 @@
 	"permissions": [
 		"bookmarks",
 		"tabs",
-		"storage",
-		"activeTab",
-		"scripting"
+		"newTab"
 	],
 	"content_security_policy": {
 		"extension_pages": "script-src 'self'; object-src 'self'"
