--- a/bmm.service
+++ b/bmm.service
@@ -8,7 +8,11 @@ Group=www-data
 WorkingDirectory=/home/michaeliyke/michaeliyke/projects/BMM
 Environment=PATH=/home/michaeliyke/michaeliyke/projects/BMM/bin
 EnvironmentFile=/home/michaeliyke/michaeliyke/projects/BMM/.env
-ExecStart=/home/michaeliyke/michaeliyke/projects/BMM/start.sh
+ExecStart=/home/michaeliyke/michaeliyke/projects/BMM/bin/gunicorn --bind 0.0.0.0:5000 wsgi:app --workers 2
+# Restart=on-failure # or always, on-abort, etc
+# RestartSec=10 # Restart service after 10 seconds if the service crashes
+# StartLimitIntervalSec=30 # Restart service 30 seconds after the service crashes
+# StartLimitBurst=3 # Restart service up to 3 times in 30 seconds
 
 [Install]
 WantedBy=multi-user.target
